--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.18.0",
     "axios": "^1.7.2",
     "luxon": "^3.4.4",
     "react": "^18.2.0",
