--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "antd": "^5.18.0",
     "axios": "^1.7.2",
+    "clsx": "^2.1.1",
     "express": "^4.19.2",
     "luxon": "^3.4.4",
     "react": "^18.2.0",
