--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "start": "react-scripts start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "antd": "^5.18.0",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
