--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.23.1",
+    "react-to-print": "^2.15.1",
     "sweetalert2": "^11.11.1",
     "swr": "^2.2.5"
   },
