--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "antd": "^5.18.0",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.11",
     "express": "^4.19.2",
     "luxon": "^3.4.4",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-responsive": "^10.0.0",
