--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
+    "escpos": "^3.0.0-alpha.6",
     "express": "^4.19.2",
     "luxon": "^3.4.4",
     "moment": "^2.30.1",
