--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.23.1",
     "react-to-print": "^2.15.1",
+    "recharts": "^2.9.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.1",
+    "papaparse": "^5.4.1",
     "sweetalert2": "^11.11.1",
     "swr": "^2.2.5"
   },
